# py-chat-response

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  system_context.md.example
.github/workflows/: deploy-docs.yml  docker-publish.yml  pr-title-check.yml  python-app.yml
docs/openapi/: index.html  openapi.json
scripts/: generate_openapi.py
src/: config.py  context_manager.py  geminiservice.py  types.py
src/routes/: chat_routes.py  context_routes.py
src/types/: chat.py  context.py
